# YOLOv8_onnxruntime_video

./: README.md
2_SimpleOnnx_yolo/: CMakeLists.txt  main.cpp  main_run.cpp
